# c_hello

./: CMakeLists.txt  a.out  altnames.c  binary.c  checking.c  cypher2.c  day_mon1.c  day_mon2.c  day_mon3.c  divisors.c  echo.c  factor.c  mywords  pizza.c  platinum.c  proto.c  recur.c  shose.c  showchar.c  showchar2.c  sizeof.c  sum_arr1.c  sum_arr2.c  swap3.c  talkback.c  two_func.c  wheat.c  width.c  words
computer/: exchange.c  fibonacci.c  inttypes.c  leaq.c  main.c  mstore.c  pointer_learn.c  stdarg.c
pointer/: a.out  arf.c  array2.c  diceroll.c  direcoll.h  manydice.c  ptr_ops.c  r_driver0.c  rand0.c  where.c  zippo1.c  zippo2.c
